<resources>
    <string name="app_name">modacafe</string>
    <string name="moda_cafe_txt">MODA CAFE</string>
    <string name="menu">MENU</string>
    <string name="hakkimizda">HAKKIMIZDA</string>
    <string name="ana_menu">ANA MENU</string>
    <string name="title_activity_scrolling">Scrolling Activity</string>
    <string name="sicak_icecekler">Sıcak İçecekler</string>
    <string name="soguk_icecekler">Soğuk İçecekler</string>
    <string name="yemekler">Yemekler</string>
    <string name="tatlilar">Tatlılar</string>
    <string name="title_activity_main3">Main Activity 3</string>








</resources>