<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|top"
    android:background="#FFFFFFFF"
    android:orientation="horizontal"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="142dp"
        android:layout_height="77dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:background="@color/baslik_moru_arkaplan"
        android:gravity="top|center"
        android:text="@string/menu"
        android:textColor="@color/baslik_moru"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/ana_button"
        android:layout_width="160dp"
        android:layout_height="93dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/ana_menu"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button

        android:id="@+id/sicak"
        android:layout_width="232dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="180dp"
        android:text="@string/sicak_icecekler"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/soguk"
        android:layout_width="231dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:text="@string/soguk_icecekler"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yemek"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="344dp"
        android:text="@string/yemekler"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tatli"
        android:layout_width="225dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="424dp"
        android:text="@string/tatlilar"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>