<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBFB"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtBaslik"
        android:layout_width="208dp"
        android:layout_height="69dp"
        android:layout_marginLeft="1dp"


        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/baslik_moru_arkaplan"
        android:paddingStart="20dp"
        android:paddingTop="11dp"
        android:paddingEnd="20dp"

        android:paddingBottom="2dp"
        android:text="@string/moda_cafe_txt"
        android:textColor="@color/baslik_moru"
        android:textSize="30sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:layout_marginBottom="200dp"
        android:background="#EFF8F5"
        android:gravity="center"
        android:text="@string/menu"
        android:textSize="20sp"
        android:textColor="#177581"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <Button
        android:id="@+id/hakkimizda_button"
        android:layout_width="204dp"
        android:layout_height="62dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="200dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/hakkimizda"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />


</androidx.constraintlayout.widget.ConstraintLayout>